--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             const nameElement = document.createElement('div');
             nameElement.className = 'fish-name';
             nameElement.innerHTML = fish.name === "Piranha" 
-                ? `<small>${fish.name} <span style="font-size:10px;">(Perilous Piranhas mini event)</span></small>` 
+                ? `<small>${fish.name} <span style="font-size:10px;"></span></small>` 
                 : fish.name;
             card.appendChild(nameElement);
 
