VERY minor changes ( misspellings)

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <script>
         const fishData = [
             { name: "Acid Puffer", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
-            { name: "Butterflyfish", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
+            { name: "Butterfly", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
             { name: "Carp", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
             { name: "Crab", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
             { name: "Dumbfish", sizes: ["Tiny", "Small", "Medium", "Large", "Huge"] },
@@ -478,7 +478,7 @@
 
         const gemValues = {
             "acidpuffer": { tiny: 80, small: 320, medium: 560, large: 800, huge: 2400 },
-            "butterflyfish": { tiny: 15, small: 60, medium: 105, large: 150, huge: 450 },
+            "butterfly": { tiny: 15, small: 60, medium: 105, large: 150, huge: 450 },
             "carp": { tiny: 20, small: 80, medium: 140, large: 200, huge: 600 },
             "crab": { tiny: 5, small: 10, medium: 20, large: 40, huge: 80 },
             "dumbfish": { tiny: 5, small: 10, medium: 30, large: 50, huge: 100 },
